--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.7",
+    "react-router-dom": "^6.12.1",
     "react-scripts": "5.0.1",
+    "redux-thunk": "^2.4.2",
     "styled-components": "^6.0.0-rc.3",
+    "sweetalert2": "^11.7.11",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
